--- a/.travis.yml
+++ b/.travis.yml
@@ -19,19 +19,15 @@ jdk:
 script:
   - git config --local user.email "scf370@gmail.com"
   - git config --local user.name "Travis"
-  - sbt ++$TRAVIS_SCALA_VERSION coverage test
   - mkdir -p ~/.bintray/
   - cat .secret-enc/.credentials | openssl aes-256-cbc -a -d -k "$PASSWORD" > ~/.bintray/.credentials
   - eval "$(ssh-agent -s)" #start the ssh agent
-  - cat .secret-enc/github_key | openssl aes-256-cbc -a -d -k "$PASSWORD" > github_key
-  - chmod 600 github_key
-  - ssh-add github_key
+  - cat .secret-enc/github_key | openssl aes-256-cbc -a -d -k "$PASSWORD" > ~/github_key
+  - chmod 600 ~/github_key
+  - ssh-add ~/github_key
   - git remote remove origin
   - git remote add origin git@github.com:scf37/sbt-build-properties.git
   - git branch -f master HEAD
   - git checkout master
   - sbt 'release with-defaults'
-
-after_success:
-  - sbt ++$TRAVIS_SCALA_VERSION coverageReport coveralls
 
