--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,6 @@ script:
   - git remote remove origin
   - git remote add origin git@github.com:scf37/sbt-build-properties.git
   - git branch -f master HEAD
-  - git checkout master
+  - git checkout master --track origin/master
   - sbt 'release with-defaults'
 
