--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ script:
   - ssh-add ~/github_key
   - git remote remove origin
   - git remote add origin git@github.com:scf37/sbt-build-properties.git
-  - git branch -f master HEAD
-  - git checkout master --track origin/master
+  - git branch -u origin/master -f master HEAD
+  - git checkout master
   - sbt 'release with-defaults'
 
