--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ script:
   - ssh-add ~/github_key
   - git remote remove origin
   - git remote add origin git@github.com:scf37/sbt-build-properties.git
+  - git fetch
   - git branch -f master HEAD
   - git checkout master
   - git branch -u origin/master
